<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/scrollView1"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#66CCFF" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/db_check_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="26sp"       
        android:visibility="gone"/>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:layout_width="0dp"
	    	 android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/name" />

	    <EditText
	        android:id="@+id/name"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_name" />
	 </LinearLayout>
	  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
 
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/fathers_name" />

	    <EditText
	        android:id="@+id/fathers_name"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_fathers_name" />
	 </LinearLayout>
	 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/mothers_name" />

	    <EditText
	        android:id="@+id/mothers_name"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_mothers_name" />
	 </LinearLayout>
	            
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/date_of_birth" />

	    <EditText
	        android:id="@+id/date_of_birth"
	        android:inputType="date"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_date_of_birth" />
	 </LinearLayout>
	 
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/gender" />

	    <EditText
	        android:id="@+id/gender"	       
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_gender" />
	 </LinearLayout>
	  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/weight" />

	    <EditText
	        android:id="@+id/weight"
	        android:inputType="numberSigned"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_weight" />
	 </LinearLayout>
	 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <TextView
	        android:layout_width="0dp"
	    	android:layout_weight="0.35"
	        android:layout_height="wrap_content"
	        android:text="@string/height" />

	    <EditText
	        android:id="@+id/height"	        
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_height" />
	 </LinearLayout>
	 
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.90"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSubmit"
                style="@color/abc_primary_text_material_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/submit"
                android:onClick="Save"   />

            <Button
                android:id="@+id/btnCancel"
                style="@color/abc_primary_text_material_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/cancel"
                android:onClick="myClickHandler" />
            
            <Button
                android:id="@+id/btnDiet"
                style="@color/abc_primary_text_material_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/diet"
                android:onClick="takeDiet" />
          	
        </LinearLayout>
        
   
</LinearLayout>
</LinearLayout>

</ScrollView>